Add new game button and style it

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Quattrocento:wght@400;700&display=swap");
+
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 400 to 700
+
+.dancing-script-dancingScript {
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
+.quattrocento-regular {
+  font-family: "Quattrocento", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.quattrocento-bold {
+  font-family: "Quattrocento", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+/*-------------------------------------------*/
 html,
 body,
 div,
@@ -129,7 +153,7 @@ body {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background-color: #598392;
+  background-color: #c2d3da;
   min-height: 100vh;
   min-width: 100vw;
   height: 100vh;
@@ -142,11 +166,11 @@ body {
 #footer {
   background-color: #01161e;
   padding: 1rem;
-  box-shadow: 0 0 2rem 0.2rem #01161e;
+  box-shadow: 0 0 3rem 0.4rem #01161e;
 }
 
 #header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
@@ -155,6 +179,7 @@ body {
 #header > h1 {
   color: #aec3b0;
   text-align: center;
+  font-family: Quattrocento, sans-serif;
   font-size: 3rem;
   font-weight: bold;
   letter-spacing: 0.5rem;
@@ -163,10 +188,11 @@ body {
 }
 
 #footer {
-  position: fixed;
+  position: sticky;
   bottom: 0;
   left: 0;
   right: 0;
+  padding: 0.5rem;
 }
 
 #footer > p {
@@ -175,6 +201,7 @@ body {
   font-size: 1.2rem;
   letter-spacing: 0.2rem;
   word-spacing: 0.5rem;
+  font-family: "Dancing Script", cursive;
 }
 
 #footer > p > span {
@@ -184,4 +211,59 @@ body {
 
 #main-page {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+#newGame {
+  flex-grow: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#newGameButton {
+  font-size: 6vmin;
+  font-family: Quattrocento, sans-serif;
+  font-weight: 700;
+  text-shadow: #aec3b0 0 0 0.8vmin;
+  color: #aec3b0;
+  background-color: #01161e;
+  letter-spacing: 0.1em;
+  gap: 0.4em;
+  border: none;
+  border-radius: 100%;
+  height: 60vmin;
+  width: 60vmin;
+  box-shadow:
+    0 0 5vmin #01161e,
+    0 0 7vmin #c2d3da inset;
+  transition: all 250ms ease-in-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#newGameButton:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  text-shadow: none;
+  box-shadow:
+    0 0 4vmin #01161e,
+    0 0 4vmin #c2d3da inset;
+}
+
+#newGameButton > span::after {
+  content: "";
+  background-color: black;
+  height: 0.1em;
+  width: 100%;
+  display: block;
+  transition: all 250ms ease-in-out;
+  transform: scale(0);
+}
+
+#newGameButton > span:hover::after {
+  transform: scale(1);
 }
