--- a/styles.css
+++ b/styles.css
@@ -227,13 +227,13 @@ body {
   font-size: 6vmin;
   font-family: Quattrocento, sans-serif;
   font-weight: 700;
-  text-shadow: #aec3b0 0 0 0.8vmin;
+  text-shadow: #aec3b0 0 0 2vmin;
   color: #aec3b0;
   background-color: #01161e;
   letter-spacing: 0.1em;
   gap: 0.4em;
   border: none;
-  border-radius: 100%;
+  border-radius: 50%;
   height: 60vmin;
   width: 60vmin;
   box-shadow:
@@ -254,16 +254,79 @@ body {
     0 0 4vmin #c2d3da inset;
 }
 
-#newGameButton > span::after {
-  content: "";
-  background-color: black;
-  height: 0.1em;
-  width: 100%;
-  display: block;
-  transition: all 250ms ease-in-out;
-  transform: scale(0);
+#newGameDialog {
+  border: none;
+  border-radius: 3vmin;
+  background: #01161e;
+  box-sizing: border-box;
+  box-shadow: 0 0 8vmin 2vmin #01161e;
 }
 
-#newGameButton > span:hover::after {
-  transform: scale(1);
+#newGameDialog::backdrop {
+  background: rgba(1, 22, 30, 0.5);
+}
+
+#newGameDialogDiv {
+  background: transparent;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 8vmin;
+  justify-content: center;
+  align-items: center;
+  padding: 4vmin 8vmin;
+}
+
+#dialogInputs {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 4vmin;
+}
+
+#dialogInputs > input {
+  width: 40vmin;
+  border: none;
+  border-radius: 3vmin;
+  text-align: center;
+  font-family: Quattrocento;
+  font-size: 1.5rem;
+  color: #01161e;
+  text-shadow: 0 0 0.2em #01161e;
+  letter-spacing: 0.25em;
+  word-spacing: 0.5em;
+  padding: 0.1em 1em;
+  background: #aec3b0;
+  transition: all 250ms;
+}
+
+#dialogInputs > input:hover,
+#dialogInputs > input:focus-visible {
+  transform: scale(1.1);
+  box-shadow: 0 0 0.8em 0.01em #aec3b0;
+  outline: none;
+  text-shadow: none;
+}
+
+#dialogButtons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 8vmin;
+  justify-content: center;
+  align-items: center;
+}
+
+#dialogButtons > button {
+  border: none;
+  padding: 1rem;
+  background: transparent;
+  color: #aec3b0;
+  font-size: 1.5rem;
+  transition: all 250ms;
+}
+
+#dialogButtons > button:hover {
+  transform: scale(1.5);
+  text-shadow: 0 0 1em #aec3b0;
 }
